tests/rosetta/out/Rust/100-doors-3.error
rustc error: exit status 1
error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGolden100-doors-31619618676/001/prog.rs:10:13
   |
10 |             result += "O";
   |             ------^^^^^^^
   |             |
   |             cannot use `+=` on type `&str`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGolden100-doors-31619618676/001/prog.rs:12:13
   |
12 |             result += "-";
   |             ------^^^^^^^
   |             |
   |             cannot use `+=` on type `&str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0368`.
