tests/rosetta/out/Rust/100-doors-3.rs
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
fn main() {
    let mut result = String::new();
    for i in 1..101 {
        let mut j = 1;
        while j * j < i {
            j += 1;
        }
        if j * j == i {
            result += "O";
        } else {
            result += "-";
        }
    }
    println!("{}", result);
}
